Ingress/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  selector:
    app: nginx-project
  ports:
    - port: 8080
      targetPort: 80
  # This service makeing the pods is reachable from outside the cluster

---
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  labels:
    app: nginx-project
spec:
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - containerPort: 80

# Nginx server exposes 80 port fro NodePort Service.
